package fr.et4.simulationReseauRoutier;

public class Barriere extends Jonction {

	@Override
	public void progresser(Voiture v, float f) {
		// TODO Auto-generated method stub
		
	}

}
