package fr.et4.simulationReseauRoutier;

class CapteurDeVitesse : extends Capteur {

    @Override
    public void activer(Voiture v) {

    }
}
