package fr.et4.simulationReseauRoutier;

public class Carrefour {

}
