package fr.et4.simulationReseauRoutier;

public enum EtatFeu {

	VERT, ROUGE, ORANGE;
	
	public void appliquer(Voiture v) {
		
	}
}