package fr.et4.simulationReseauRoutier;

public class Extremite {
	
	private boolean cote;

	public boolean isCote() {
		return cote;
	}

	public void setCote(boolean cote) {
		this.cote = cote;
	}
	
}
