package fr.et4.simulationReseauRoutier;

public class FeuBicolore extends Feu {

    @Override
    void envoyerSignal(int s) {}

}
