package fr.et4.simulationReseauRoutier;

public class FeuTricolore extends Feu {

    @Override
    void envoyerSignal(int s) {}

}
