package fr.et4.simulationReseauRoutier;

public abstract class Jonction {

	public abstract void progresser(Voiture v, float f);
}
