package fr.et4.simulationReseauRoutier;

public class JonctionSimple extends Jonction {

	@Override
	public void progresser(Voiture v, float f) {
		// TODO Auto-generated method stub
		
	}

}
