package fr.et4.simulationReseauRoutier;

public class RegulationCarrefour4Feux extends ElementDeRegulation {

    @Override
    public void capteurActive(Capteur c) {}

    @Override
    public void miseAJourTemporelle() {}
}
