package fr.et4.simulationReseauRoutier;

public class Voiture {

	private int id;
	private float vitesseMax;
	private float vitesse;
	
	public void avancer(float a) {
		
	}

	public int getId() {
		return id;
	}

	public void setId(int id) {
		this.id = id;
	}

	public float getVitesseMax() {
		return vitesseMax;
	}

	public void setVitesseMax(float vitesseMax) {
		this.vitesseMax = vitesseMax;
	}

	public float getVitesse() {
		return vitesse;
	}

	public void setVitesse(float vitesse) {
		this.vitesse = vitesse;
	}
	
	
}
